[package]
name = "psrec"
version = "0.9.2"
edition = "2021"

[dependencies]
psutil = { version = "3.2.2", default-features = false, features = ["cpu", "process"] }
ctrlc = "3.2.5"
argh = "0.1.12"

chrono = "0.4.31"

[target.'cfg(target_os="linux")'.dependencies]
procfs = { version = "0.15.1", default-features = false, features = [] }

